--- a/p247页实验一：实现二叉树的各种基本运算/p247页实验一：实现二叉树的各种基本运算/p247页实验一：实现二叉树的各种基本运算.vcxproj
+++ b/p247页实验一：实现二叉树的各种基本运算/p247页实验一：实现二叉树的各种基本运算/p247页实验一：实现二叉树的各种基本运算.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="btree.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="btree.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
