图的深度遍历（非递归完成）

--- a/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历.vcxproj.filters
+++ b/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClInclude Include="graph.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="sqqueue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="sqstack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="graph.cpp">
@@ -25,6 +31,12 @@
     </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sqqueue.cpp">
+      <Filter>头文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sqstack.cpp">
+      <Filter>头文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
