--- a/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历.vcxproj
+++ b/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历/p308页第五题无向图的的深度和广度遍历.vcxproj
@@ -80,10 +80,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="graph.h" />
+    <ClInclude Include="sqqueue.h" />
+    <ClInclude Include="sqstack.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="graph.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="sqqueue.cpp" />
+    <ClCompile Include="sqstack.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
